Fix missing GPL header